--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 				<configuration>
 					<archive>
 						<manifest>
-							<mainClass>com.yhk.game.gourmetGameStartup</mainClass>
+							<mainClass>com.yhk.game.GourmetGameApplication</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
@@ -37,9 +37,16 @@
 	</build>
 	<dependencies>
 		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-api</artifactId>
-			<version>5.2.0</version>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>2.21.0</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
