--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
 	<version>0.0.1-SNAPSHOT</version>
 	
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
 		<java.version>1.9</java.version>
 	</properties>
 	
@@ -31,6 +31,9 @@
 							<mainClass>com.yhk.game.GourmetGameApplication</mainClass>
 						</manifest>
 					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
 				</configuration>
 			</plugin>
 		</plugins>
